[package]
name = "gameoff2023-10x-cloud-champion"
publish = false
version = "0.1.0"
edition = "2021"
description = "10x Cloud Champion: A simulation clicker game"
readme = "README.md"
repository = "https://github.com/Enet4/10xCloudChampion"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "clicker", "simulation"]
categories = ["gui", "wasm", "web-programming", "games"]

[lib]
name = "cloud_champion"

[features]
# replace main webapp with a UI component playground
playground = []

[dependencies]
getrandom = { version = "0.2.11", features = ["js"] }
gloo-console = "0.3.0"
gloo-timers = "0.3.0"
js-sys = "0.3.65"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
web-sys = { version = "0.3.65", features = [
    "HtmlAudioElement",
    "HtmlMediaElement",
] }
yew = { version = "0.21", features = ["csr"] }

# optimize some dev dependencies for better performance during development
[profile.dev.package."yew"]
opt-level = "s"

[profile.dev.package."serde"]
opt-level = "s"

[profile.dev.package."serde_json"]
opt-level = "s"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = 'thin'
